Update AWS EBS CSI driver to v1.35.0
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/addons/csi-aws-ebs/aws-csi.yaml
+++ b/addons/csi-aws-ebs/aws-csi.yaml
@@ -8,8 +8,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -29,8 +29,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 automountServiceAccountToken: true
@@ -44,8 +44,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 automountServiceAccountToken: true
@@ -58,8 +58,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -87,8 +87,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -110,8 +110,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -167,8 +167,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -208,8 +208,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -256,8 +256,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -277,8 +277,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -298,8 +298,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -319,8 +319,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -340,8 +340,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -362,8 +362,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -380,8 +380,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -402,8 +402,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -423,8 +423,8 @@ spec:
         app: ebs-csi-node
         app.kubernetes.io/name: aws-ebs-csi-driver
         app.kubernetes.io/instance: aws-ebs-csi-driver
-        helm.sh/chart: aws-ebs-csi-driver-2.34.0
-        app.kubernetes.io/version: "1.34.0"
+        helm.sh/chart: aws-ebs-csi-driver-2.35.1
+        app.kubernetes.io/version: "1.35.0"
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -591,8 +591,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -613,8 +613,8 @@ spec:
         app: ebs-csi-controller
         app.kubernetes.io/name: aws-ebs-csi-driver
         app.kubernetes.io/instance: aws-ebs-csi-driver
-        helm.sh/chart: aws-ebs-csi-driver-2.34.0
-        app.kubernetes.io/version: "1.34.0"
+        helm.sh/chart: aws-ebs-csi-driver-2.35.1
+        app.kubernetes.io/version: "1.35.0"
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -679,7 +679,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-            - name: EC2_ENDPOINT
+            - name: AWS_EC2_ENDPOINT
               valueFrom:
                 configMapKeyRef:
                   name: aws-meta
@@ -868,8 +868,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.34.0
-    app.kubernetes.io/version: "1.34.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.35.1
+    app.kubernetes.io/version: "1.35.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
