--- a/addons/csi-azuredisk/csi-azuredisk.yaml
+++ b/addons/csi-azuredisk/csi-azuredisk.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: csi-azuredisk-controller-sa
   namespace: kube-system
 ---
@@ -17,8 +17,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: csi-azuredisk-node-sa
   namespace: kube-system
 ---
@@ -29,8 +29,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: azuredisk-external-attacher-role
 rules:
   - apiGroups:
@@ -79,6 +79,12 @@ rules:
       - update
       - patch
   - apiGroups:
+      - storage.k8s.io
+    resources:
+      - volumeattributesclasses
+    verbs:
+      - get
+  - apiGroups:
       - coordination.k8s.io
     resources:
       - leases
@@ -98,8 +104,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: azuredisk-external-provisioner-role
 rules:
   - apiGroups:
@@ -191,8 +197,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: azuredisk-external-resizer-role
 rules:
   - apiGroups:
@@ -250,6 +256,14 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - storage.k8s.io
+    resources:
+      - volumeattributesclasses
+    verbs:
+      - get
+      - list
+      - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -258,8 +272,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: azuredisk-external-snapshotter-role
 rules:
   - apiGroups:
@@ -348,6 +362,13 @@ rules:
       - nodes
     verbs:
       - get
+      - patch
+  - apiGroups:
+      - storage.k8s.io
+    resources:
+      - csinodes
+    verbs:
+      - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -356,8 +377,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: azuredisk-csi-attacher-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -375,8 +396,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: azuredisk-csi-provisioner-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -394,8 +415,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: azuredisk-csi-resizer-role
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -413,8 +434,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: azuredisk-csi-snapshotter-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -458,8 +479,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: csi-azuredisk-controller
   namespace: kube-system
 spec:
@@ -474,8 +495,8 @@ spec:
         app.kubernetes.io/instance: azuredisk-csi-driver
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/name: azuredisk-csi-driver
-        app.kubernetes.io/version: v1.30.1
-        helm.sh/chart: azuredisk-csi-driver-v1.30.1
+        app.kubernetes.io/version: v1.30.3
+        helm.sh/chart: azuredisk-csi-driver-v1.30.3
     spec:
       containers:
         - args:
@@ -697,8 +718,8 @@ metadata:
     app.kubernetes.io/instance: azuredisk-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azuredisk-csi-driver
-    app.kubernetes.io/version: v1.30.1
-    helm.sh/chart: azuredisk-csi-driver-v1.30.1
+    app.kubernetes.io/version: v1.30.3
+    helm.sh/chart: azuredisk-csi-driver-v1.30.3
   name: csi-azuredisk-node
   namespace: kube-system
 spec:
@@ -712,8 +733,8 @@ spec:
         app.kubernetes.io/instance: azuredisk-csi-driver
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/name: azuredisk-csi-driver
-        app.kubernetes.io/version: v1.30.1
-        helm.sh/chart: azuredisk-csi-driver-v1.30.1
+        app.kubernetes.io/version: v1.30.3
+        helm.sh/chart: azuredisk-csi-driver-v1.30.3
     spec:
       affinity:
         nodeAffinity:
@@ -786,6 +807,7 @@ spec:
             - --enable-perf-optimization=true
             - --drivername=disk.csi.azure.com
             - --volume-attach-limit=-1
+            - --reserved-data-disk-slot-num=0
             - --cloud-config-secret-name=cloud-config
             - --cloud-config-secret-namespace=kube-system
             - --custom-user-agent=
@@ -824,7 +846,7 @@ spec:
           name: azuredisk
           resources:
             limits:
-              memory: 200Mi
+              memory: 600Mi
             requests:
               cpu: 10m
               memory: 20Mi
@@ -896,8 +918,8 @@ apiVersion: storage.k8s.io/v1
 kind: CSIDriver
 metadata:
   annotations:
-    csiDriver: v1.30.1
-    snapshot: v7.0.2
+    csiDriver: v1.30.3
+    snapshot: v8.0.1
   name: disk.csi.azure.com
 spec:
   attachRequired: true
