--- a/addons/ccm-nutanix/nutanix-ccm.yaml
+++ b/addons/ccm-nutanix/nutanix-ccm.yaml
@@ -122,6 +122,7 @@ spec:
         - args:
             - --leader-elect=true
             - --cloud-config=/etc/cloud/nutanix_config.json
+            - --tls-cipher-suites=TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
           env:
             - name: POD_NAMESPACE
               valueFrom:
