--- a/addons/csi-external-snapshotter/webhook.yaml
+++ b/addons/csi-external-snapshotter/webhook.yaml
@@ -1,4 +1,4 @@
-# Source: https://github.com/kubernetes-csi/external-snapshotter/blob/v8.0.1/deploy/kubernetes/webhook-example/webhook.yaml
+# Source: https://github.com/kubernetes-csi/external-snapshotter/blob/v8.1.0/deploy/kubernetes/webhook-example/webhook.yaml
 ---
 apiVersion: v1
 kind: Secret
@@ -30,6 +30,31 @@ webhooks:
       namespace: kube-system
       name: "snapshot-validation-service"
       path: "/volumesnapshot"
+    caBundle: |
+{{ .Certificates.KubernetesCA | b64enc | indent 6 }}
+  admissionReviewVersions: ["v1"]
+  sideEffects: None
+  failurePolicy: Fail
+  timeoutSeconds: 2
+---
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingWebhookConfiguration
+metadata:
+  name: "validation-webhook.groupsnapshot.storage.k8s.io"
+  namespace: kube-system
+webhooks:
+- name: "validation-webhook.groupsnapshot.storage.k8s.io"
+  rules:
+  - apiGroups:   ["groupsnapshot.storage.k8s.io"]
+    apiVersions: ["v1alpha1"]
+    operations:  ["CREATE", "UPDATE"]
+    resources:   ["volumegroupsnapshotclasses"]
+    scope:       "*"
+  clientConfig:
+    service:
+      namespace: "kube-system"
+      name: "snapshot-validation-service"
+      path: "/volumegroupsnapshot"
     caBundle: |
 {{ .Certificates.KubernetesCA | b64enc | indent 6 }}
   admissionReviewVersions: ["v1"]
