--- a/.golangci.yml
+++ b/.golangci.yml
@@ -69,6 +69,9 @@ linters-settings:
       alias: $1$2
 
 issues:
+  exclude:
+  - "G115: integer overflow conversion (.+)"
+
   exclude-dirs:
   - hack
   - vendor
