[release/v1.9] Cherry-pick the required fixes for the `release/v1.9` branch (#3547)
* feat: add flag to skip TLS verification (#3522)

* feat: add flag to skip TLS verification

Signed-off-by: Stephan <34886888+steled@users.noreply.github.com>

* Update addons/backups-restic/backups-restic.yaml

Co-authored-by: Artiom Diomin <artiom@hey.com>
Signed-off-by: Stephan <34886888+steled@users.noreply.github.com>

---------

Signed-off-by: Stephan <34886888+steled@users.noreply.github.com>
Co-authored-by: Artiom Diomin <artiom@hey.com>

* fix cloud config defaulting before terraform config apply (#3534)

* Make sure no slash at the end of vcenterPrefix (#3537)

Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

* Fix kubevirt csi addon template (#3529)

* fix kubevirt csi addon template

* update internal images in template

* update internal images in template

* fix labels

* update addons

* update addons sa

* fix toleration (#3545)

* update Machine controller image (#3546)

* update Machine controller image

Signed-off-by: Mohamed Rafraf <81432497+mohamed-rafraf@users.noreply.github.com>

* update go.mod

---------

Signed-off-by: Mohamed Rafraf <81432497+mohamed-rafraf@users.noreply.github.com>

* labeling control-plane before (#3544)

---------

Signed-off-by: Stephan <34886888+steled@users.noreply.github.com>
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>
Signed-off-by: Mohamed Rafraf <81432497+mohamed-rafraf@users.noreply.github.com>
Co-authored-by: Stephan <34886888+steled@users.noreply.github.com>
Co-authored-by: Artiom Diomin <artiom@hey.com>
Co-authored-by: Mohamed Rafraf <81432497+mohamed-rafraf@users.noreply.github.com>
Co-authored-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/csi-kubevirt/2-kubevirt-csi-controller.yaml
+++ b/addons/csi-kubevirt/2-kubevirt-csi-controller.yaml
@@ -79,7 +79,7 @@ data:
     value: "{{ . }}"
 kind: Secret
 metadata:
-    labels:
+  labels:
     app: kubevirt-csi-driver
   name: infra-kubeconfig
   namespace: kube-system
@@ -104,11 +104,14 @@ spec:
       labels:
         app: kubevirt-csi-driver
     spec:
-      serviceAccount: kubevirt-csi
+      serviceAccount: kubevirt-csi-controller-sa
       priorityClassName: system-cluster-critical
       nodeSelector:
         node-role.kubernetes.io/control-plane: ""
       tolerations:
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: Exists
+          effect: NoSchedule
         - key: CriticalAddonsOnly
           operator: Exists
         - key: node-role.kubernetes.io/master
@@ -117,7 +120,7 @@ spec:
       containers:
         - name: csi-driver
           imagePullPolicy: Always
-          image: '{{ .InternalImages.Get "KubeVirtCSIDriver" }}'
+          image: '{{ .InternalImages.Get "KubeVirtCSI" }}'
           args:
             - "--endpoint=$(CSI_ENDPOINT)"
             - "--infra-cluster-namespace=$(INFRACLUSTER_NAMESPACE)"
@@ -163,7 +166,7 @@ spec:
               memory: 50Mi
               cpu: 10m
         - name: csi-provisioner
-          image: '{{ .InternalImages.Get "KubeVirtCSIExternalProvisioner" }}'
+          image: '{{ .InternalImages.Get "KubeVirtCSIProvisioner" }}'
           args:
             - "--csi-address=$(ADDRESS)"
             - "--default-fstype=ext4"
@@ -177,7 +180,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-attacher
-          image:  '{{ .InternalImages.Get "KubeVirtCSIExternalAttacher" }}'
+          image:  '{{ .InternalImages.Get "KubeVirtCSIAttacher" }}'
           args:
             - "--csi-address=$(ADDRESS)"
             - "--v=5"
@@ -194,7 +197,7 @@ spec:
               memory: 50Mi
               cpu: 10m
         - name: csi-liveness-probe
-          image: '{{ .InternalImages.Get "KubeVirtCSILivenessprobe" }}'
+          image: '{{ .InternalImages.Get "KubeVirtCSILivenessProbe" }}'
           args:
             - "--csi-address=/csi/csi.sock"
             - "--probe-timeout=3s"
