--- a/test/tests.yml
+++ b/test/tests.yml
@@ -89,6 +89,35 @@
     - name: vsphere_default
     - name: vsphere_flatcar
 
+- scenario: install_containerd_external
+  initVersion: v1.32
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_default
+      runIfChanged: "(.prow/|addons/|examples/|hack/|pkg/|test/)"
+    - name: aws_ubuntu_previous_lts
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_flatcar
+    - name: equinixmetal_rockylinux
+    - name: gce_default
+    - name: hetzner_default
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_flatcar
+    - name: openstack_rhel
+    - name: openstack_rockylinux
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
 ###################
 # CLUSTER UPGRADE #
 ###################
@@ -125,6 +154,35 @@
 - scenario: upgrade_containerd_external
   initVersion: v1.30
   upgradedVersion: v1.31
+  infrastructures:
+    - name: aws_amzn_stable
+    - name: aws_default_stable
+    - name: aws_ubuntu_previous_lts
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_default_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: digitalocean_default_stable
+    - name: digitalocean_rockylinux_stable
+    - name: equinixmetal_default_stable
+    - name: equinixmetal_flatcar_stable
+    - name: equinixmetal_rockylinux_stable
+    - name: gce_default_stable
+    - name: hetzner_default_stable
+    - name: hetzner_rockylinux_stable
+    - name: openstack_default_stable
+    - name: openstack_flatcar_stable
+    - name: openstack_rhel_stable
+    - name: openstack_rockylinux_stable
+    - name: vsphere_default_stable
+    - name: vsphere_flatcar_stable
+
+- scenario: upgrade_containerd_external
+  initVersion: v1.31
+  upgradedVersion: v1.32
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_default_stable
@@ -236,6 +294,33 @@
     - name: vsphere_default
     - name: vsphere_flatcar
 
+- scenario: calico_containerd_external
+  initVersion: v1.32
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_flatcar
+    - name: equinixmetal_rockylinux
+    - name: gce_default
+    - name: hetzner_default
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_flatcar
+    - name: openstack_rhel
+    - name: openstack_rockylinux
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
 - scenario: cilium_containerd_external
   initVersion: v1.29
   infrastructures:
@@ -317,6 +402,33 @@
     - name: vsphere_default
     - name: vsphere_flatcar
 
+- scenario: cilium_containerd_external
+  initVersion: v1.32
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_flatcar
+    - name: equinixmetal_rockylinux
+    - name: gce_default
+    - name: hetzner_default
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_flatcar
+    - name: openstack_rhel
+    - name: openstack_rockylinux
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
 - scenario: external_cni_flannel_helm_chart
   initVersion: v1.29
   infrastructures:
@@ -373,6 +485,33 @@
 
 - scenario: external_cni_flannel_helm_chart
   initVersion: v1.31
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_flatcar
+    - name: equinixmetal_rockylinux
+    - name: gce_default
+    - name: hetzner_default
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_flatcar
+    - name: openstack_rhel
+    - name: openstack_rockylinux
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
+- scenario: external_cni_flannel_helm_chart
+  initVersion: v1.32
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -454,6 +593,34 @@
     - name: vsphere_default_stable
     - name: vsphere_flatcar_stable
 
+- scenario: upgrade_cilium_containerd_external
+  initVersion: v1.31
+  upgradedVersion: v1.32
+  infrastructures:
+    - name: aws_amzn_stable
+    - name: aws_default_stable
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_default_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: digitalocean_default_stable
+    - name: digitalocean_rockylinux_stable
+    - name: equinixmetal_default_stable
+    - name: equinixmetal_flatcar_stable
+    - name: equinixmetal_rockylinux_stable
+    - name: gce_default_stable
+    - name: hetzner_default_stable
+    - name: hetzner_rockylinux_stable
+    - name: openstack_default_stable
+    - name: openstack_flatcar_stable
+    - name: openstack_rhel_stable
+    - name: openstack_rockylinux_stable
+    - name: vsphere_default_stable
+    - name: vsphere_flatcar_stable
+
 ####################
 # CONFORMANCE TEST #
 ####################
@@ -472,7 +639,12 @@
   infrastructures:
     - name: aws_long_timeout_default
 
+- scenario: conformance_containerd_external
+  initVersion: v1.32
+  infrastructures:
+    - name: aws_long_timeout_default
+
 - scenario: kube_proxy_ipvs_external
-  initVersion: v1.31
+  initVersion: v1.32
   infrastructures:
     - name: aws_default
